# missile

./: README.md  ToDo.txt  cabal.config  cabal.project.freeze  missile.cabal  opai-gui.cabal
missile-field/src/: Field.hs
missile-field/tests/: FieldTests.hs
src/: Async.hs  AsyncBot.hs  Auxiliary.hs  Bot.hs  Cli.hs  ContBot.hs  Field.hs  Game.hs  GameSettings.hs  GameTree.hs  GameWidget.hs  GameWithBot.hs  Main.hs  Player.hs  Rendering.hs  Settings.hs  Versus.hs  VersusTable.hs
src/FileFormats/: Common.hs  Vkontakte.hs  XT.hs
src/interface/: about.glade  settings.glade  tab.glade  window.glade
test/: FieldTests.hs  Tests.hs
