name:                missile
version:             4.0.0
license:             AGPL-3
license-file:        LICENSE.txt
author:              kurnevsky
maintainer:          kurnevsky@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable missile
  hs-source-dirs:     src
  main-is:            Main.hs
  other-modules:      Auxiliary,
                      Player,
                      Field,
                      GameTree,
                      Rendering,
                      Bot,
                      AsyncBot,
                      ContBot,
                      Game,
                      GameSettings,
                      Cli
  build-depends:      base,
                      array,
                      containers,
                      data-default,
                      haskell-gi-base,
                      gi-cairo,
                      gi-cairo-connector,
                      gi-cairo-render,
                      gi-gdk,
                      gi-gdkpixbuf,
                      gi-gtk,
                      gi-gtk-hs,
                      split,
                      text,
                      transformers,
                      process,
                      --bytestring,
                      colour,
                      random,
                      optparse-applicative
  default-language:   Haskell2010
  default-extensions: MultiWayIf,
                      LambdaCase
  ghc-options:        -Wall
                      -O2
                      -threaded

test-suite missile-tests
  type:               exitcode-stdio-1.0
  main-is:            Tests.hs
  other-modules:      FieldTests
  hs-source-dirs:     src,
                      test
  default-language:   Haskell2010
  default-extensions: MultiWayIf,
                      LambdaCase,
                      ApplicativeDo
  build-depends:      base,
                      array,
                      containers,
                      split,
                      HUnit,
                      test-framework,
                      test-framework-hunit
