cabal-version: 3.0

name: missile
version: 5.0.0
license: AGPL-3.0-or-later
license-file: LICENSE.txt
author: kurnevsky
maintainer: kurnevsky@gmail.com
build-type: Simple

common defaults
  default-language: Haskell2010
  ghc-options: -O2 -Wall
  build-depends: base

library missile-field
  import: defaults
  hs-source-dirs: missile-field/src
  exposed-modules: Player
                 , Field
  build-depends: array
               , containers

test-suite missile-field-tests
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: missile-field/tests
  main-is: Tests.hs
  other-modules: FieldTests
  build-depends: split
               , HUnit
               , test-framework
               , test-framework-hunit
               , missile-field

executable missile
  hs-source-dirs:     src
  main-is:            Main.hs
  other-modules:      Auxiliary,
                      Async,
                      GameTree,
                      Rendering,
                      Bot,
                      Game,
                      GameSettings,
                      Cli,
                      Paths_missile
  build-depends:      base,
                      containers,
                      data-default,
                      haskell-gi-base,
                      gi-cairo,
                      gi-cairo-connector,
                      gi-cairo-render,
                      gi-gdk,
                      gi-gdkpixbuf,
                      gi-gtk,
                      gi-gtk-hs,

                      gi-gtk-declarative,
                      gi-gtk-declarative-app-simple,

                      split,
                      text,
                      transformers,
                      profunctors,
                      process,
                      colour,
                      random,
                      optparse-applicative,
                      missile-field
  default-extensions: MultiWayIf,
                      LambdaCase
  ghc-options:        -Wall
                      -O2
                      -threaded
