name:                missile
version:             2013.3.10
license:             GPL-3
license-file:        LICENSE
author:              kurnevsky
maintainer:          kurnevsky@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable opai-gui
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Player,
                       Field,
                       Settings,
                       Game,
                       FileFormats.Vkontakte,
                       Auxiliary,
                       Bot,
                       FileFormats.Common,
                       GameWithBot
  build-depends:       base >=4.6 && <4.7,
                       array,
                       containers,
                       OpenGL,
                       colour,
                       ConfigFile,
                       MissingH,
                       directory,
                       gtk,
                       gtkglext,
                       transformers,
                       glade,
                       bytestring,
                       utf8-string,
                       strict,
                       encoding,
                       process,
                       split,
                       StateVar
  default-language:    Haskell2010
  default-extensions:  MultiWayIf,
                       LambdaCase
  ghc-options:        -Wall
                      -fno-warn-unused-do-bind
                      -O2
                      -threaded
